<resources>
    <string name="app_name">Morfin Auth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_get_sdk_version">Get SDK Version</string>
    <string name="menu_supported_device_list">Get Supported Device List</string>
    <string name="menu_select_image_format">Select Image Format</string>
    <string name="menu_select_template_format">Select Template Format</string>
    <string name="menu_set_quality">Set Quality</string>
    <string name="menu_set_key">Set key</string>
    <string name="menu_set_timeout">Set Timeout</string>
    <string name="settings">Settings</string>
    <string name="actions">Actions</string>
    <string name="ble_actions">Bluetooth Actions</string>
    <string name="make">MAKE: </string>
    <string name="model">MODEL: </string>
    <string name="serial_no">SERIAL NO: </string>
    <string name="bleserial_no">BLESERIAL NO: </string>
    <string name="w_h">W/H: </string>
    <string name="mantra_softech_india_pvt_ltd_2020">Mantra Softech India PVT LTD © 2025</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_image_format">Select Image Format</string>
    <string name="select_template_format">Select Template Format</string>
    <string name="select_quality">Set Quality</string>
    <string name="set_key">Set Key</string>
    <string name="set_timeout">Set Timeout</string>
    <string name="CheckDevice">Check Device</string>
    <string name="MatchFinger">Match Finger</string>
    <string name="uninit">Uninit</string>
    <string name="action_check_device">Check Device</string>
    <string name="action_init">Init</string>
    <string name="SyncCapture">Start Capture</string>
    <string name="AutoCapture">Auto Capture</string>
    <string name="StopSyncCapture">Stop Capture</string>
    <string name="saveImage">Save Image - Template</string>
    <string name="saveImageble">Save Image/Template</string>
    <string name="init">Init</string>
    <string name="morfin_auth">Morfin_Auth </string>
    <string name="connected_device_list">Connected Device List</string>
    <string name="getconnecteddevices">Get Connected Devices</string>

    <string name="batteryinfo">Get Battery Info</string>
    <string name="gettimer">Get Device Timer</string>
    <string name="settimer">Set Device Timer</string>
    <string name="ok">OK</string>
    <string name="batteryinfotxt">Battery Info</string>
    <string name="temperature">Temperature :</string>
    <string name="health_percentage">Health Percentage :</string>
    <string name="charge_percentage">Charge Percentage :</string>
    <string name="charger_connected">Charger Connected :</string>
    <string name="temperature_celsius">\u00B0C</string>
    <string name="set_timer">Set Timer</string>
    <string name="sleep_mode">Sleep Mode(in minute):</string>
    <string name="off_mode">Off Mode(in minute):</string>
    <string name="advertisement">Advertisement(in minute):</string>
    <string name="select_capture_format">Select Capture Format</string>
    <string name="select_ble_devices">Select Ble Device</string>
    <string name="disconnect">Disconnect</string>
    <string name="MatchTemplate">Match Template</string>
    <string name="menu_gen_client_key">Generate Key</string>
    <string name="menu_gen_view_key">View key</string>
    <string name="genrate_key">Generate Key</string>
    <string name="generate">Generate</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="add_key">Add Key</string>
    <string name="nodevice">No Devices</string>
    <string name="scanning_for_devices">Scanning for devices...</string>
    <string name="no_devices_found">No devices found</string>
    <string name="enter_timeout_1_30_sec">Enter timeout (1–30 sec)</string>
    <string name="timeout_sec">TIMEOUT(Sec) : </string>
    <string name="quality_should_be_between_1_100">Quality should be between 1-100</string>
</resources>