<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_5sdp"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/skyBlu"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/genrate_key"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text=" KEY : "
                android:textColor="@color/txtBlu"
                android:textSize="@dimen/_8sdp"/>

            <EditText
                android:id="@+id/edtKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/add_key"
                android:text=""
                android:textColor="@color/txtBlu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCancel"
                style="@style/txtTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/skyBlu"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/txtSave"
                style="@style/txtTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/skyBlu"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/generate"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>