<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBlu"
    android:padding="@dimen/_5sdp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_fp_logo"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:padding="@dimen/_2sdp"
                android:scaleType="fitXY"
                android:src="@drawable/finger_blue" />

            <TextView
                android:id="@+id/txtApp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/iv_fp_logo"
                android:gravity="center_vertical"
                android:padding="@dimen/_3sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/morfin_auth"
                android:textColor="@color/txtBlu"
                android:textSize="@dimen/_14ssp"
                android:typeface="sans" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rlSideMenu"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:background="@color/skyBlu">

                <ImageView
                    android:id="@+id/ivStaticMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="@dimen/_5sdp"
                    app:srcCompat="@drawable/ic_menu_white" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/rlContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">


                <LinearLayout
                    android:id="@+id/llDeviceList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtconnect"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@color/skyBlu"
                        android:gravity="center"
                        android:padding="@dimen/_3sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/connected_device_list"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCapture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/skyBlu"
                    android:orientation="vertical"
                    android:padding="@dimen/_1sdp">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtCaptureStatus"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center"
                            android:background="@color/txtBlu"
                            android:gravity="center"
                            android:inputType="textMultiLine"
                            android:maxLines="2"
                            android:padding="@dimen/_3sdp"
                            android:paddingLeft="@dimen/_5sdp"
                            android:scrollHorizontally="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imgFinger"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_220sdp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_clor_white"
                            android:scaleType="fitXY" />

                        <TextView
                            android:id="@+id/txtStatusMessage"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center"
                            android:background="@color/skyBlu"
                            android:gravity="center"
                            android:inputType="textMultiLine"
                            android:padding="@dimen/_3sdp"
                            android:paddingLeft="@dimen/_5sdp"
                            android:scrollHorizontally="false"
                            android:text="Quality 65"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDeviceinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.60"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtMake"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/make"
                            android:textColor="@color/txtBlu"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/txtModel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/model"
                            android:textColor="@color/txtBlu"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/txtSerialNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/serial_no"
                            android:textColor="@color/txtBlu"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/txtbleSerialNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/bleserial_no"
                            android:visibility="gone"
                            android:textColor="@color/txtBlu"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/txtWH"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/w_h"
                            android:textColor="@color/txtBlu"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.40">

                        <ImageView
                            android:id="@+id/iv_status_fp"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_alignParentRight="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/finger_red" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_below="@id/iv_status_fp"
                            android:layout_alignParentRight="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/company_logo_1" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtCopyRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:padding="@dimen/_1sdp"
                    android:text="@string/mantra_softech_india_pvt_ltd_2020"
                    android:textColor="@color/txtBlu"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

            <!--                        </ScrollView>-->

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>