<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_5sdp"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/skyBlu"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/select_image_format"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <com.mantra.morfinauthsample.ui.RecursiveRadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:weightSum="6">


                <RadioButton
                    android:id="@+id/cbBmp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:checked="true"
                    android:text="BMP"
                    android:textColor="@color/txtBlu"
                    android:textSize="@dimen/_8sdp" />


                <RadioButton
                    android:id="@+id/cbWsq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="WSQ"
                    android:textColor="@color/txtBlu"
                    android:textSize="@dimen/_8sdp" />

                <RadioButton
                    android:id="@+id/cbRaw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="RAW"
                    android:textColor="@color/txtBlu"
                    android:textSize="@dimen/_8sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:weightSum="4">


                <RadioButton
                    android:id="@+id/cbFIR_V2005"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="FIR V2005"
                    android:textColor="@color/txtBlu"
                    android:textSize="@dimen/_8sdp" />

                <RadioButton
                    android:id="@+id/cbFIR_V2011"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="FIR V2011"
                    android:textColor="@color/txtBlu"
                    android:textSize="@dimen/_8sdp" />

            </LinearLayout>
        </com.mantra.morfinauthsample.ui.RecursiveRadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCancel"
                style="@style/txtTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/skyBlu"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/txtSave"
                style="@style/txtTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/skyBlu"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>